frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP   # or ClusterIP if using Ingress
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
